# enpm809k

./: .gitignore  LICENSE  README.md  pyproject.toml
Dataset/: a1.csv  a2.csv  a3.csv  a4.csv
enpm809k/: filter_images_single.py  main.py  new_notebook.ipynb  notebook.ipynb
navigation/: CMakeLists.txt  faby.rviz  package.xml
navigation/launch/: gazebo.launch  gazebo_world.launch  navigation.launch
navigation/src/: PedestrianSFMPlugin.cpp
navigation/urdf/: faby.urdf
navigation/worlds/: human.world
pose_data/images/single/: annotations.json
