[tool.poetry]
name = "enpm809k"
version = "0.1.0"
description = ""
authors = ["Jared Dobry <jareddobry10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.9.3"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'enpm809k.main:main'