[tool.poetry]
name = "enpm809k"
version = "0.1.0"
description = ""
authors = ["Jared Dobry <jareddobry10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.9.3"
click = "^8.1.3"
wget = "^3.2"
tensorflow = "^2.11.0"
tensorboard = "^2.11.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'enpm809k.main:main'