[tool.poetry]
name = "enpm809k"
version = "0.1.0"
description = ""
authors = ["Jared Dobry <jareddobry10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.9.3"
click = "^8.1.3"
wget = "^3.2"
tensorflow = "^2.11.0"
tensorboard = "^2.11.0"
ipykernel = "^6.19.0"
opencv-python = "^4.6.0.66"
pandas = "^1.5.2"
scikit-image = "^0.19.3"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
keras = "^2.11.0"
pydot = "^1.4.2"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'enpm809k.main:main'